# FoxbatDB

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_en.md  main.cc
config/: flag.toml
src/: main.cc
src/common/: common.h  flags.cc  flags.h
src/core/: db.cc  db.h  engine.cc  engine.h  filemanager.cc  filemanager.h  handler.cc  handler.h  memory.cc  memory.h  obj.cc  obj.h  pubsub.cc  pubsub.h  transaction.cc  transaction.h
src/cron/: cron.cc  cron.h
src/data_structure/: binstr.cc  binstr.h  dict.h
src/errors/: net.cc  net.h  protocol.cc  protocol.h  runtime.cc  runtime.h
src/flag/: flags.cc  flags.h
src/frontend/: cmdmap.cc  cmdmap.h  executor.cc  executor.h  parser.cc  parser.h  server.cc  server.h
src/log/: datalog.cc  datalog.h  oplog.cc  oplog.h  serverlog.cc  serverlog.h
src/network/: access.h  cmd.cc  cmd.h
src/persistence/: persistence.cc  persistence.h
src/utils/: ctmap.h  resp.cc  resp.h  ringbuffer.h  timer.cc  timer.h  utils.cc  utils.h
test/: CMakeLists.txt  benchmark.py  function.py  main.cc  requirements.txt  stress.py  utils.py
test/benchmark/: CMakeLists.txt  benchmark_embedded.cc  benchmark_external.cc  compare_redis.py  main.cc  requirements.txt
test/function/: CMakeLists.txt  main.cc  merge_test.cc  setget_test.cc  tx_test.cc
test/tools/: tools.cc  tools.h
